# world-intel-mcp

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  com.agentic.intel-collector.plist  pyproject.toml
scripts/: collector-daemon.sh
src/world_intel_mcp/: cache.py  cli.py  collector.py  fetcher.py  server.py  vector_store.py
src/world_intel_mcp/analysis/: alerts.py  cascade.py  escalation.py  exposure.py  posture.py  situation.py  surge.py  world_brief.py
src/world_intel_mcp/config/: countries.py  population.py  trade_routes.py
src/world_intel_mcp/dashboard/: __init__.py  app.py  index.html
src/world_intel_mcp/reports/templates/: country_dossier.html  market_overview.html
src/world_intel_mcp/sources/: ai_watch.py  aviation.py  central_banks.py  conflict.py  elections.py  fleet.py  geospatial.py  health.py  infrastructure.py  intelligence.py  markets.py  military.py  news.py  nuclear.py  sanctions.py  shipping.py  social.py  space_weather.py  traffic.py  webcams.py  wildfire.py
src/world_intel_mcp/tests/: conftest.py  test_smoke.py  test_sources.py  test_vector_store.py
